--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="img-flex" src="https://placehold.it/640x480" alt="">
     </header>
     <div class="card-body">
-      <p>The Stegosaurus is an armoured dinarsour with distincitve back plates and tail spikes.</p>
+      <p>The Stegosaurus is an armoured dinonsaur with distinctive back plates and tail spikes.</p>
     </div>
   </article>
 </body>
